Enable trace metrics Update producer code